refactor: project struct; feat: update readme.md;
