# routers/api/v1/article.go
@@ -14,9 +14,13 @@ import (
 	"github.com/unknwon/com"
 )
 
-//获取单个文章
+// @Summary 获取单个文章
+// @Produce  json
+// @Param id path int true "ID"
+// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Router /articles/{id} [get]
 func GetArticle(c *gin.Context) {
-	appG := app.Gin{c}
+	appG := app.Gin{C: c}
 
 	id := com.StrTo(c.Param("id")).MustInt()
 	valid := validation.Validation{}
@@ -39,7 +43,12 @@ func GetArticle(c *gin.Context) {
 	}
 }
 
-//获取多个文章
+// @Summary 获取多个文章
+// @Produce  json
+// @Param state query int true "State"
+// @Param tag_id query int true "TagID"
+// @Success 200 {string} json "{"code":200,"data":{ lists: [], total: 0 },"msg":"ok"}"
+// @Router /articles [get]
 func GetArticles(c *gin.Context) {
 	data := make(map[string]interface{})
 	maps := make(map[string]interface{})
@@ -81,7 +90,17 @@ func GetArticles(c *gin.Context) {
 	})
 }
 
-//新增文章
+// @Summary 新增文章
+// @Produce  json
+// @Param tag_id query string true "TagID"
+// @Param title query string true "Title"
+// @Param desc query string true "Desc"
+// @Param content query string true "Content"
+// @Param created_by query string true "CreatedBy"
+// @Param state query int true "State"
+// @Param cover_image_url query string true "CoverImageUrl"
+// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Router /articles [post]
 func AddArticle(c *gin.Context) {
 	tagId := com.StrTo(c.Query("tag_id")).MustInt()
 	title := c.Query("title")
@@ -130,7 +149,17 @@ func AddArticle(c *gin.Context) {
 	})
 }
 
-//修改文章
+// @Summary 修改文章
+// @Produce  json
+// @Param id path int true "ID"
+// @Param tag_id body string false "TagID"
+// @Param title body string false "Title"
+// @Param desc body string false "Desc"
+// @Param content body string false "Content"
+// @Param modified_by body string true "ModifiedBy"
+// @Param state body int false "State"
+// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Router /api/v1/articles/{id} [put]
 func EditArticle(c *gin.Context) {
 	valid := validation.Validation{}
 
@@ -198,7 +227,11 @@ func EditArticle(c *gin.Context) {
 	})
 }
 
-//删除文章
+// @Summary 删除文章
+// @Produce  json
+// @Param id path int true "ID"
+// @Success 200 {string} json "{"code":200,"data":{},"msg":"ok"}"
+// @Router /api/v1/articles/{id} [delete]
 func DeleteArticle(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
 
